--- a/src/main/res/layout/activity_nov.xml
+++ b/src/main/res/layout/activity_nov.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#EFEFEF">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -30,10 +31,10 @@
             android:id="@+id/lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:dividerHeight="8dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="14dp"
             android:layout_marginTop="5dp"
-            android:divider="#3fff"/>
+            android:divider="#3fff"
+            android:dividerHeight="8dp" />
 
     </FrameLayout>
 
