--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_flip"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="600dp"
     android:layout_gravity="center"
+    android:layout_margin="15dp"
     android:animateLayoutChanges="true"
-    android:backgroundTint="#FAE9FF"
+    android:backgroundTint="#FFFFFF"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="30dp"
-    android:layout_margin="15dp"
     tools:ignore="SpeakableTextPresentCheck">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,11 +23,11 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="111dp"
-            android:fontFamily="@font/nsrb"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="TITLE"
-            android:textColor="#686868"
-            android:textSize="42dp"
+            android:textColor="#000000"
+            android:textSize="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -37,18 +37,23 @@
         <TextView
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="300dp"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:fontFamily="@font/nanumbarungothic"
+            android:gravity="center_horizontal"
+            android:paddingHorizontal="15dp"
+            android:paddingTop="15dp"
             android:text="word+content"
-            android:textSize="14sp"
-            android:visibility="gone"
+            android:textAlignment="viewStart"
+            android:lineSpacingExtra ="5dp"
+            android:textColor="#000000"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintVertical_bias="0.1" />
+            app:layout_constraintVertical_bias="0.56" />
 
         <Button
             android:id="@+id/btn_quiz"
@@ -58,7 +63,6 @@
             android:layout_margin="18dp"
             android:background="@drawable/roundbutton"
             android:elevation="20dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_find"
             app:layout_constraintHorizontal_bias="0.5"
@@ -77,7 +81,6 @@
             android:layout_margin="18dp"
             android:background="@drawable/roundbutton"
             android:elevation="20dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/btn_quiz"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -86,6 +89,35 @@
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:paddingHorizontal="15dp"
+            android:text="TextView"
+            android:textColor="#363333"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
