디자인 피드백 후 입니다.

--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -57,12 +57,15 @@
 
         <Button
             android:id="@+id/btn_quiz"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:layout_margin="18dp"
             android:background="@drawable/roundbutton"
             android:elevation="20dp"
+            android:fontFamily="@font/nanumsqacb"
+            android:text="퀴즈"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_find"
             app:layout_constraintHorizontal_bias="0.5"
@@ -75,12 +78,15 @@
 
         <Button
             android:id="@+id/btn_find"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
             android:layout_gravity="bottom|right"
             android:layout_margin="18dp"
             android:background="@drawable/roundbutton"
             android:elevation="20dp"
+            android:fontFamily="@font/nanumsqacb"
+            android:text="검색"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/btn_quiz"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
