--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -25,6 +25,7 @@
             android:layout_height="105dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
+            android:paddingHorizontal="20dp"
             android:text="TITLE"
             android:textColor="#000000"
             android:textSize="32dp"
@@ -109,12 +110,13 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="TextView"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
