--- a/src/main/res/layout/activity_signup.xml
+++ b/src/main/res/layout/activity_signup.xml
@@ -72,17 +72,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.714"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">
+        app:layout_constraintTop_toBottomOf="@+id/et_age">
 
         <RadioButton
-            android:id="@+id/radioButton15"
+            android:id="@+id/rb_man"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="남" />
 
         <RadioButton
-            android:id="@+id/radioButton17"
+            android:id="@+id/rb_woman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -90,7 +90,7 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/et_age"
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginStart="60dp"
@@ -106,10 +106,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/et_username"
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginStart="60dp"
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
+        android:id="@+id/btn_signup"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="179dp"
