--- a/src/main/res/layout/activity_signup.xml
+++ b/src/main/res/layout/activity_signup.xml
@@ -64,7 +64,7 @@
         app:layout_constraintGuide_begin="210dp" />
 
     <RadioGroup
-        android:id="@+id/radioGroup3"
+        android:id="@+id/rg_gender"
         android:layout_width="250dp"
         android:layout_height="56dp"
         android:layout_marginTop="10dp"
