--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -58,6 +58,7 @@
             android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="17sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
@@ -76,6 +77,7 @@
             android:fontFamily="@font/nanumsqacb"
             android:text="퀴즈"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_find"
             app:layout_constraintHorizontal_bias="0.5"
@@ -97,6 +99,7 @@
             android:fontFamily="@font/nanumsqacb"
             android:text="검색"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/btn_quiz"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -115,6 +118,7 @@
             android:text="TextView"
             android:textColor="#000000"
             android:textSize="20sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +134,7 @@
             android:text="TextView"
             android:textColor="#363333"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
