--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -28,7 +28,7 @@
             android:paddingHorizontal="20dp"
             android:text="TITLE"
             android:textColor="#000000"
-            android:textSize="32dp"
+            android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
