--- a/src/main/res/layout/navi_header.xml
+++ b/src/main/res/layout/navi_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="200dp"
     android:background="@drawable/top1"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -14,12 +14,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
 
-        app:srcCompat="@drawable/ic_baseline_create_24" />
+        app:srcCompat="@drawable/person" />
 
     <TextView
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="고성욱"
@@ -28,7 +29,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/userinfo"
         android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:text="28세 남"
