--- a/src/main/res/menu/navi_menu.xml
+++ b/src/main/res/menu/navi_menu.xml
@@ -3,21 +3,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/account"
-            android:icon="@drawable/ic_launcher_foreground"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:title="계정"
-            />
+            android:title="계정" />
         <item
             android:id="@+id/setting"
-            android:icon="@drawable/ic_launcher_foreground"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:title="설정"
-            />
-        <item
-            android:id="@+id/logout"
-            android:icon="@drawable/ic_launcher_foreground"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:title="로그아웃"
-            />
+            android:title="설정" />
+
     </group>
 </menu>
