--- a/src/main/res/layout/activity_quiz.xml
+++ b/src/main/res/layout/activity_quiz.xml
@@ -44,17 +44,19 @@
             android:gravity="center_horizontal"
             android:paddingTop="15sp"
             android:text="다음 뜻이 지칭 하는 단어는?"
+            android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_quiz"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="145dp"
             android:layout_marginHorizontal="20dp"
             android:gravity="center_horizontal"
             android:paddingTop="15dp"
             android:text="TextView"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
