--- a/src/main/res/layout/navi_header.xml
+++ b/src/main/res/layout/navi_header.xml
@@ -23,7 +23,7 @@
         android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="고성욱"
+        android:text="   고성욱"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#000000"
         android:textSize="20sp" />
@@ -33,6 +33,7 @@
         android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:text="28세 남"
+        android:textAlignment="center"
         android:textColor="#000000" />
 
 </LinearLayout>
