--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/name_acount"
             android:layout_width="match_parent"
             android:layout_height="105dp"
             android:fontFamily="sans-serif-medium"
@@ -44,7 +44,7 @@
             app:layout_constraintGuide_begin="110dp" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -63,11 +63,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/tv_number"
             app:layout_constraintVertical_bias="0.215" />
 
         <Button
-            android:id="@+id/btn_quiz"
+            android:id="@+id/btn_back"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_gravity="bottom"
@@ -79,17 +79,17 @@
             android:textSize="16sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_find"
+            app:layout_constraintEnd_toStartOf="@+id/btn_home"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content"
+            app:layout_constraintTop_toBottomOf="@+id/comment"
             app:layout_constraintVertical_bias="0.511"
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
 
         <Button
-            android:id="@+id/btn_find"
+            android:id="@+id/btn_home"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_gravity="bottom|right"
@@ -100,17 +100,17 @@
             android:text="검색"
             android:textSize="16sp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_quiz"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btn_quiz"
-            app:layout_constraintTop_toTopOf="@+id/btn_quiz"
+            app:layout_constraintStart_toEndOf="@+id/btn_back"
+            app:layout_constraintTop_toTopOf="@+id/btn_back"
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_quizNum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -122,10 +122,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
+            app:layout_constraintTop_toBottomOf="@+id/name_acount" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_number"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
@@ -138,7 +138,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_quizNum" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
