--- a/src/main/res/layout/activity_account.xml
+++ b/src/main/res/layout/activity_account.xml
@@ -9,8 +9,6 @@
     android:layout_margin="15dp"
     android:animateLayoutChanges="true"
     android:backgroundTint="#FFFFFF"
-    android:clickable="true"
-    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="30dp"
     tools:ignore="SpeakableTextPresentCheck">
@@ -26,7 +24,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:text="NAME"
+            android:text="GoSungWook"
             android:textColor="#000000"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
@@ -50,12 +48,12 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
             android:fontFamily="@font/nanumbarungothic"
-            android:gravity="center_horizontal"
+            android:gravity="center|center_horizontal"
             android:lineSpacingExtra="5dp"
             android:paddingHorizontal="15dp"
             android:paddingTop="15dp"
-            android:text="word+content"
-            android:textAlignment="viewStart"
+            android:text="어플 이용에 감사합니다."
+            android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
