--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/title1"
+            android:id="@+id/lock_word"
             android:layout_width="match_parent"
             android:layout_height="105dp"
             android:fontFamily="sans-serif-medium"
@@ -44,7 +44,7 @@
             app:layout_constraintGuide_begin="110dp" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/lock_mean"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -79,17 +79,17 @@
             android:textSize="16sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_home"
+            app:layout_constraintEnd_toStartOf="@+id/btn_start"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content"
+            app:layout_constraintTop_toBottomOf="@+id/lock_mean"
             app:layout_constraintVertical_bias="0.511"
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
 
         <Button
-            android:id="@+id/btn_home"
+            android:id="@+id/btn_start"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_gravity="bottom|right"
@@ -122,7 +122,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title1" />
+            app:layout_constraintTop_toBottomOf="@+id/lock_word" />
 
         <TextView
             android:id="@+id/mean"
