--- a/src/main/res/layout/activity_lockscreen.xml
+++ b/src/main/res/layout/activity_lockscreen.xml
@@ -44,7 +44,7 @@
             app:layout_constraintGuide_begin="110dp" />
 
         <TextView
-            android:id="@+id/lock_mean"
+            android:id="@+id/acc_mean"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -78,7 +78,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lock_mean"
+            app:layout_constraintTop_toBottomOf="@+id/acc_mean"
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
