--- a/src/main/res/layout/activity_nov.xml
+++ b/src/main/res/layout/activity_nov.xml
@@ -30,11 +30,13 @@
         <ListView
             android:id="@+id/lv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="620dp"
             android:layout_marginHorizontal="14dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="30dp"
             android:divider="#3fff"
-            android:dividerHeight="8dp" />
+            android:dividerHeight="8dp">
+
+        </ListView>
 
     </FrameLayout>
 
