아이콘 생성

--- a/src/main/res/layout/activity_account.xml
+++ b/src/main/res/layout/activity_account.xml
@@ -108,7 +108,10 @@
                     android:layout_height="70dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
-                    android:clickable="false"
+                    android:clickable="true"
+                    android:contextClickable="false"
+                    android:focusable="auto"
+                    android:longClickable="false"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/uni_1black"
